test/files/neg/symbol-literal-removal.scala
// scalac: -Xsource:3
//
abstract class Foo {
  val foo = 'TestSymbol
}
